--- a/src/app/plugins/api-explorer/components/api-item/api-item.component.html
+++ b/src/app/plugins/api-explorer/components/api-item/api-item.component.html
@@ -1,9 +1,9 @@
 
-<div class="mb-8 md:mb-12">
+<div class="mb-4 md:mb-12">
   <h4
     #header
     (click)="navigationService.collapseSubmenuItem(apiItem.clickedSubscriptionName, !isCollapsed);"
-    class="mx-4 mb-4 md:mb-8 text-2xl tracking-tight leading-10 font-extrabold text-gray-900
+    class="mx-4 mb-2 md:mb-8 text-xl tracking-tight leading-10 font-extrabold text-gray-900
       hover:text-gray-700 sm:leading-none md:text-3xl cursor-pointer"
     >
     {{ apiItem.method }}
