--- a/src/app/plugins/authentication/pages/authenticate/authenticate.component.html
+++ b/src/app/plugins/authentication/pages/authenticate/authenticate.component.html
@@ -1,4 +1,4 @@
-<div class="relative bg-white overflow-hidden mx-4 mx-4">
+<div class="relative bg-white overflow-hidden mx-4">
   <div class="mt-8">
     <app-login *ngIf="currentAuthenticationForm == 'login'"></app-login>
     <app-register *ngIf="allowUserSelfRegistration && currentAuthenticationForm == 'register'" (cancelDropdownEmitter)="revertToLogin()"></app-register>
