--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
-<div class="max-h-screen overflow-hidden">
+<div class="max-h-screen h-screen overflow-hidden">
   <div>
     <app-navbar (toggleSidebarEmitter)="toggleSidebar()" [isSidebarToggled]="isSidebarToggled"></app-navbar>
   </div>
-  <div>
-    <div class="flex flex-row h-screen">
+  <div class="h-full">
+    <div class="flex flex-row h-full">
       <div
         [ngClass]="{'hidden': !isSidebarToggled}"
-        class="mt-16 w-full md:w-64 flex-grow-0 flex-shrink-0 bg-orange-600 overflow-y-auto overflow-x-hidden"
+        class="pt-16 h-full w-full md:w-64 flex-grow-0 flex-shrink-0 bg-orange-600 overflow-y-auto overflow-x-hidden"
         >
         <app-sidebar (sidebarItemClickEmitter)="onSidebarItemClick()" [isSidebarToggled]="isSidebarToggled"></app-sidebar>
       </div>
       <div
         [ngClass]="{'hidden': isSidebarToggled}"
-        class="mt-16 md:block flex-grow px-2 md:px-8 overflow-y-auto"
+        class="h-full md:block flex-grow pt-16 px-2 md:px-8 overflow-y-auto"
         >
         <router-outlet></router-outlet>
       </div>
