--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -58,14 +58,14 @@
   </div>
 </div>
 <div
-  class="w-full fixed top-0 z-50 mt-16"
+  class="w-full md:w-1/3 md:left-1/3 fixed top-0 z-50 mt-20"
   *ngIf="notificationInfo != null"
   >
   <label
     class="close cursor-pointer flex items-center justify-between mx-4 p-6 shadow text-lg text-white border border-yellowGray-500"
     [ngClass]="{
       'bg-red-600': notificationInfo.type === 'danger',
-      'bg-green-600': notificationInfo.type === 'success',
+      'bg-orangeGray-500': notificationInfo.type === 'success',
       'bg-yellowGray-400': notificationInfo.type === 'warning',
       'bg-indigo-600': notificationInfo.type === 'info'
       }"
