--- a/src/app/plugins/document-explorer/pages/add/add.component.html
+++ b/src/app/plugins/document-explorer/pages/add/add.component.html
@@ -1,1 +1,74 @@
-<div #dropzone id="dropzone" class="dropzone"></div>
+<div class="relative bg-white overflow-scroll-y mx-4">
+  <div class="mt-4 max-w-screen-xl mx-auto relative">
+    <h3 class="mb-0 text-xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:mb-4 md:text-3xl">
+      <a
+        [routerLink]="['/documents']"
+        class="rounded-md text-orange-600 hover:text-orange-900 focus:text-orange-900"
+        >
+        Document Explorer
+      </a>
+    </h3>
+    <h2 class="text-2xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-4xl mb-4">
+      Add Documents
+    </h2>
+    <section class="lg:w-full h-64 md:h-128 mb-4 md:mb-8">
+      <div #dropzone id="dropzone" class="dropzone"></div>
+    </section>
+    <section class="lg:w-full">
+      <h3 class="mb-2 md:mb-4 text-xl tracking-tight leading-10 font-extrabold text-orange-600 sm:leading-none md:text-2xl">
+        Documents Added
+      </h3>
+      <table class="border-collapse w-full">
+        <thead>
+          <tr>
+            <th class="p-3 font-bold uppercase bg-gray-200 text-gray-900 border border-gray-300 hidden lg:table-cell">
+              Document ID
+            </th>
+            <th class="p-3 font-bold uppercase bg-gray-200 text-gray-900 border border-gray-300 hidden lg:table-cell">
+              Path
+            </th>
+            <th class="p-3 font-bold uppercase bg-gray-200 text-gray-900 border border-gray-300 hidden lg:table-cell">
+              Added By
+            </th>
+            <th class="p-3 font-bold uppercase bg-gray-200 text-gray-900 border border-gray-300 hidden lg:table-cell">
+              Date Added
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr
+            *ngIf="!documentsAdded.length"
+            class="bg-gray-100 flex text-center py-2 px-1 lg:table-row flex-row lg:flex-row flex-wrap lg:flex-no-wrap mb-10 lg:mb-0"
+            >
+            <td
+              colspan="100%"
+              >
+              No new documents have been added.
+            </td>
+          </tr>
+          <tr
+            *ngFor="let document of documentsAdded"
+            class="bg-white lg:hover:bg-gray-100 flex lg:table-row flex-row lg:flex-row flex-wrap lg:flex-no-wrap mb-10 lg:mb-0"
+            >
+            <td class="w-full lg:w-auto p-3 pt-8 lg:pt-3 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
+              <span class="lg:hidden absolute top-0 left-0 bg-gray-200 px-2 py-1 text-xs font-bold uppercase">Document ID</span>
+              {{ document.documentId }}
+            </td>
+            <td class="w-full lg:w-auto p-3 pt-8 lg:pt-3  text-gray-800 text-center border border-b text-center block lg:table-cell relative lg:static">
+              <span class="lg:hidden absolute top-0 left-0 bg-gray-200 px-2 py-1 text-xs font-bold uppercase">Path</span>
+              {{ document.path }}
+            </td>
+            <td class="w-full lg:w-auto p-3 pt-8 lg:pt-3  text-gray-800 text-center border border-b text-center block lg:table-cell relative lg:static">
+              <span class="lg:hidden absolute top-0 left-0 bg-gray-200 px-2 py-1 text-xs font-bold uppercase">Added By</span>
+              {{ document.userId }}
+            </td>
+            <td class="w-full lg:w-auto p-3 pt-8 lg:pt-3 text-gray-800 text-center border border-b text-center block lg:table-cell relative lg:static">
+              <span class="lg:hidden absolute top-0 left-0 bg-gray-200 px-2 py-1 text-xs font-bold uppercase">Date Added</span>
+              {{ document.inserteddate | datetimeFormat: 'yyyy-MM-dd HH:mm Z':currentTimezone }}
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+  </div>
+</div>
