--- a/src/app/plugins/document-explorer/pages/explore/explore.component.html
+++ b/src/app/plugins/document-explorer/pages/explore/explore.component.html
@@ -1,7 +1,15 @@
-<div class="row">
-  <div class="col-12 mb-1">
-    <app-searchbar #searchbar [currentTimezone]="currentTimezone" (documentQueryResultEmitter)="displayResults($event)"></app-searchbar>
+<div class="relative bg-white overflow-scroll-y mx-4">
+  <div class="mt-8">
+    <div class="max-w-screen-xl mx-auto relative">
+      <h2 class="text-2xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-4xl mb-4">
+        Document Explorer
+      </h2>
+      <app-searchbar #searchbar [currentTimezone]="currentTimezone" (documentQueryResultEmitter)="displayResults($event)"></app-searchbar>
+    </div>
   </div>
+</div>
+
+<div class="row">
   <div class="col-12 mb-1">
     <input type="button" class="btn btn-primary" value="Add Documents..." (click)="addDocuments()" />
   </div>
