--- a/src/app/plugins/document-explorer/components/share-modal/share-modal.component.html
+++ b/src/app/plugins/document-explorer/components/share-modal/share-modal.component.html
@@ -1,10 +1,36 @@
-<div class="row mx-2 my-2">
-  <div class="col-12">
-    <h5 class="formkiq-font">Share Document</h5>
-    <h6>Share this link (expires in one hour):</h6>
-    <textarea #shareUrlTextarea rows="8" class="stretch-width">{{ shareUrl }}</textarea>
-  </div>
-  <div class="col-12 text-center">
-    <button type="submit" class="btn btn-primary" (click)="close()">OK</button>
+<div class="absolute top-0 left-0 w-screen h-screen z-50" style="background-color: rgba(0, 0, 0, 0.5)">
+  <div class="bg-white absolute w-full h-full md:w-1/3 md:h-auto md:top-1/3 md:left-1/3 rounded shadow-lg z-50 overflow-y-auto">
+    <div class="py-4 text-left px-6">
+      <div class="flex justify-between items-center mb-2 md:mb-4">
+        <h3 class="text-xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-2xl">
+          Share Document
+        </h3>
+        <div
+          class="cursor-pointer mb-2"
+          (click)="close()"
+          >
+          <svg class="fill-current text-black" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+            <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
+          </svg>
+        </div>
+      </div>
+      <section>
+        <h6 class="mb-2 md:mb-4 text-lg tracking-tight leading-10 font-semibold text-gray-900 sm:leading-none md:text-xl">
+          Share this link (expires in 48 hours):
+        </h6>
+        <textarea #shareUrlTextarea rows="8" class="font-mono w-full">{{ shareUrl }}</textarea>
+      </section>
+      <div class="flex justify-end pt-2">
+        <button
+          class="md:mt-1 px-6 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
+            text-white focus:outline-none focus:shadow-outline
+            bg-green-600 hover:bg-green-500
+            transition duration-150 ease-in-out md:text-base"
+          (click)="close()"
+          >
+          OK
+        </button>
+      </div>
+    </div>
   </div>
 </div>
